# AllocationAlgorithmsSimulation

./: .gitignore  CMakeLists.txt  main.cpp  run.sh
MemoryManagemantLib/: CMakeLists.txt
MemoryManagemantLib/algorithms/: AllocationAlgotithmI.hpp  BestFit .cpp  BestFit.cpp  BestFit.hpp  CMakeLists.txt  FirstFit.cpp  FirstFit.hpp  NextFit.cpp  NextFit.hpp  WorstFit.cpp  WorstFit.hpp
MemoryManagemantLib/common/: Hole.hpp
MemoryManagemantLib/structures/: Bitmap.cpp  Bitmap.hpp  CMakeLists.txt  LinkedList.cpp  LinkedList.hpp  MemoryManagemantStructureI.hpp
ProcessSimulationFramework/: CMakeLists.txt
ProcessSimulationFramework/measurement/: CMakeLists.txt  FileManager.hpp  MeasurementHandler.cpp  MeasurementHandler.hpp
ProcessSimulationFramework/memory/: Memory.hpp
ProcessSimulationFramework/process/: CMakeLists.txt  Process.hpp  ProcessFactory.cpp  ProcessFactory.hpp  ProcessManager.cpp  ProcessManager.hpp  ProcessStorage.cpp  ProcessStorage.hpp
ProcessSimulationFramework/simulation/: CMakeLists.txt  Concepts.hpp  MainComponent.cpp  MainComponent.hpp  Simulation.hpp
ProcessSimulationFramework/simulation/utils/: Concepts.hpp
